fix: switch out deprecated text API